<resources>

    <string name="app_name">base1</string>
    <string name="action_settings">Settings</string>
    <string name="id_usuario">Serie De Auto:</string>
    <string name="user">Marca:</string>
    <string name="nombre">Nombre De Propietario:</string>
    <string name="apellidop">Apellido Paterno:</string>
    <string name="apellidom">Apellido Materno:</string>
    <string name="email">Correo Electronico:</string>

    <string name="alta">Alta</string>
    <string name="baja">Baja</string>
    <string name="consulta">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="limpiar">Limpiar</string>
</resources>
